# rabbit

./: #four.spthy#  .gitignore  .ocamlformat  Dockerfile  LICENSE  README.md  README_new.md  camserver.spthy  case_study_sec_lattice_using_allow_rule  client_session_key.aes  converter_test.sh  dune-project  evaluate.sh  package-lock.json  pipeline.md  pp_camserver.txt  pp_example_decl.txt  pp_process_client.txt  rab-mode.el  rab_verification_manager_v4.py  rabbit.opam  rabbit.sublime-syntax  rabbit_compile_tamarin.sh  rabbitm.opam  syntax_spec.md  syntax_spec_no_TAMARIN.md  syntax_spec_no_TAMARIN.txt  syntax_spec_reduced.txt  syntax_spec_regular.md  syntax_spec_typesystem.md  tamarin_verify_separate.sh  test.sh  test3.spthy  test4.spthy  test6.spthy  todo  traces.dot  traces.json  typesystem_spec_no_TAMARIN.md  typesystem_spec_reduced.txt
alcotest_test/: dune  lattice_util_test.ml  test_main.ml  to_cst_test.ml  typechecker_test.ml
examples/: #verysimple.rab#  #verysimple.spthy#  .#verysimple.rab  .#verysimple.spthy  000_simplest.rab  000_simplest.spthy  010_self_communication.rab  010_self_communication.spthy  011_self_commu_no_check.rab  011_self_commu_no_check.spthy  015_multi_communication.rab  015_multi_communication.spthy  020_pingpong.rab  020_pingpong.spthy  021_pingpong_loop.rab  021_pingpong_loop.spthy  030_nonce_handshake.rab  030_nonce_handshake.spthy  031_nonce_handshake_loop.rab  031_nonce_handshake_loop.spthy  032_nonce_handshake_loop.rab  032_nonce_handshake_loop_dest.rab  032_nonce_handshake_loop_dest.spthy  033_nonce_handshake_loop_single_channel.rab  033_nonce_handshake_loop_single_channel.spthy  034_nonce_handshake_simplified.rab  034_nonce_handshake_simplified.spthy  035_nonce_handshake_no_crypto.rab  035_nonce_handshake_no_crypto.spthy  036_nonce_handshake_simpler.rab  036_nonce_handshake_simpler.spthy  037_nonce_handshake_loop_alice.rab  037_nonce_handshake_loop_alice.spthy  038_nonce_handshake_loop_alice.rab  038_nonce_handshake_loop_alice.spthy  040_asym.spthy  040_param.rab  040_param.spthy  041_asym_commu.rab  041_asym_commu.spthy  (+152 more)
examples/camserver_simplified/: 202_camserver.rab  _202_camserver.spthy  _202_camserver.spthy.2  _202_camserver.spthy.2.svg.viz  _202_camserver.spthy.svg.viz  log.2.txt  log.md  log.txt
examples/dyncheck/: dyncheck.rab  evaluate.sh  parameterized.dyncheck.rab  parameterized.rab  udp_rpc.rab
examples/fmcad2025/: README.md  default.rab  default_sapicp.spthy  evaluate.sh  parameterized.rab
examples/needham_schroeder/: needham_schroeder.rab  needham_schroeder_noattack_nofilesys.rab  needham_schroeder_nofilesys.rab  needham_schroeder_nofilesys_typesys.rab  needham_schroeder_nofilesys_unidirectional.rab  needham_schroeder_nofilesys_unidirectional_tmrn.rab  needham_schroeder_nofilesys_unidirectional_typesys.rab  udp_rpc.rab
lib/: config.ml  config.mli  context.ml  cst_syntax.ml  dune  error.ml  input.ml  lattice_util.ml  lexer.ml  loader.ml  loader.mli  location.ml  maps.ml  maps.mli  name.ml  name.mli  parser.mly  postprocessing.ml  printer.ml  sample.ml  sem.ml  sets.ml  sets.mli  substitute.ml  syntax.ml  to_cst.ml  toplevel.ml  totamarin.ml  toxml.dtd  toxml.ml  typechecker.ml  typed.ml  typer.ml  ulexbuf.ml  ulexbuf.mli  utils.ml
main/: dune  rabbit.ml
pretty_print_output/: digital_signature.txt  digital_signature_typed.txt  pp_camserver_typed.txt  pp_digital_signature_typed.txt  pp_processes.txt  typed_declsys_printed.txt
results/: config_metadata.json  global_summary.json
results/camserver/tag-transition_post-process/: compilation_log.txt
results/needham_schroeder_noattack_nofilesys/tag-transition/: compilation_log.txt  compiled.spthy
results/needham_schroeder_nofilesys/tag-transition_post-process/: compilation_log.txt  (+1 more)
src/: build.ml  config.ml  config.mli  context.ml  context.mli  cst_converter.ml  cst_converter.mli  cst_env.ml  cst_syntax.ml  cst_util.ml  desugar.ml  dune  env.ml  env.mli  etype.ml  ident.ml  ident.mli  input.ml  input.mli  lattice_util.ml  lexer.ml  lexer.mli  loader.ml  loader.mli  location.ml  location.mli  maps.ml  maps.mli  name.ml  name.mli  parse_util.ml  parser.mly  parser_test.ml  postprocessing.ml  postprocessing.mli  primitives.ml  printer.ml  printer.mli  rabbit.ml  rabbitm.ml  (+36 more)
tamarin_logs/: DOCUMENTATION.MD
tamarin_models/: DOCUMENTATION.MD  camserver.spthy  camserver_invoke_syscall_violation.rab  camserver_no_opt.spthy  camserver_tt_pp.spthy  diff_minimal_and_minimal_typed.txt  digital_signature_tt_pp.spthy  minimal.spthy  needham_schroeder_eab175d83ac941f69f41fb8e9af5674ce8dfd4bc.spthy  needham_schroeder_new_syntax.spthy  needham_schroeder_new_syntax_equals_sign.spthy  needham_schroeder_new_syntax_equals_sign_tt_pp.spthy  needham_schroeder_new_syntax_put_repl_event_tt_pp.spthy  needham_schroeder_new_syntax_tt_pp.spthy  needham_schroeder_new_syntax_tt_pp_echo_correction.spthy  needham_schroeder_no_filesys2_tt_pp.spthy  needham_schroeder_no_filesys_tt_pp.spthy  needham_schroeder_nofilesys_tt_pp.spthy
tamarin_models/needham_schroeder/: needham_schroeder_noattack_no_filesys.spthy  needham_schroeder_nofilesys_unidirectional_tt_pp.spthy  needham_schroeder_tt_pp.spthy
test/: README.md  dune  main.ml  parser_test.ml  sample_test.ml  test.ml  test.rab  test_rabbit.ml  typechecker_test.ml
test_alcotest/: dune  typechecker_test.ml
typesys_examples/: channel_access_ill_typed.rab  invoke_syscall_ill_typed.rab  read_access_violation.rab  read_access_well_typed.rab  sec_ty_syscall_combination_ill_typed.rab  send_ill_typed.rab  send_well_typed.rab
(+20 files in other folders)
