opam-version: "2.0"
name: "rabbit"
version: "0.1.0"
maintainer: "sewon@sewonpark.com"
authors: "Sewon Park"
license: "MIT"
homepage: "https://github.com/zt-iot/rabbit"


build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "5.0.0"}
  "dune" {>= "3.16"}
  "ocamlfind"
  "menhir" {= "20220210"}
  "menhirLib"
  "sedlex" {= "3.1"}
  "proverif" {= "2.05"}
]

depexts: [
  ["coreutils"] {os = "macos"}     # for 'timeout'
  ["graphviz"] {os = "linux" | os = "macos"}  # required by proverif
]

synopsis: "Rabbit: A modeling and verification framework for networked systems"
description: """
Rabbit is a domain-specific language and toolchain for modeling networked systems
and verifying their security properties using the Tamarin and ProVerif backends.
"""

post-messages: [
  "NOTE:"
  ""
  "• System tools like 'timeout' (from coreutils) and 'graphviz' may already be installed if you ran:"
  "      opam install . --deps-only"
  "  If not, install them manually:"
  "      macOS: brew install coreutils graphviz"
  ""
  "• IMPORTANT: This project requires 'tamarin-prover' (v1.10), which is NOT available via OPAM."
  "  macOS: install via Homebrew (Rosetta will be used on Apple Silicon):"
  "      brew install tamarin-prover/tap/tamarin-prover"
  ""
  "  ⚠️ Linux/ARM64: Homebrew installation is likely to FAIL due to lack of prebuilt binaries."
  "  In that case, you must build Tamarin from source:"
  "      https://tamarin-prover.com/manual/master/book/002_installation.html"
  ""
  "The project will not work without 'tamarin-prover' available in your PATH."
]