opam-version: "2.0"
name: "rabbit"
version: "0.1.0"
maintainer: "sewon@sewonpark.com"
authors: "Sewon Park"
license: "MIT"
homepage: "https://github.com/zt-iot/rabbit"


build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.14.2"}
  "dune" {>= "3.16"}
  "ocamlfind"
  "menhir" {>= "20220210"}
  "menhirLib"
  "sedlex" {>= "3.1"}
#  "proverif" {= "2.05"}
]

depexts: [
#  ["coreutils"] {os = "macos"}     # for 'timeout'
#  ["graphviz"] {os = "linux" | os = "macos"}  # required by proverif
]

synopsis: "Rabbit: A modeling and verification framework for networked systems"
description: """
Rabbit is a domain-specific language and toolchain for modeling networked systems
and verifying their security properties using the Tamarin and ProVerif backends.
"""

post-messages: [
  "NOTE:"
  ""
  "To run evaluate.sh, follow README.md."
]